<resources>
    <string name="app_name">EG buddy</string>
    <string name="title_home">Daswhboard</string>
    <string name="title_dashboard">Consumer rights</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="appliance_type">
        <item>Unknown</item>
        <item>Light</item>
        <item>Fan</item>
        <item>AC</item>
        <item>Refrigerator</item>
    </string-array>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>

    </string-array>
    <string name="linktosite">How to handle My Fees and Fines??> </string>
    <string name="linktosite1">http://www.tnerc.gov.in/regulation/FAF2004.pdf</string>
    <string name="link">Theft of Energy!!</string>
    <string name="linkk">"http://www.tnerc.gov.in/regulation/S%20Code/SC%207-5.pdf" </string>
    <string name="link1">Excess Amount </string>
    <string name="link11">"http://www.tnerc.gov.in/regulation/S%20Code/SC%207-8.pdf" </string>
</resources>
