<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rights"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TextView
    android:id="@+id/text1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/linktosite"
    android:textStyle="bold"/>
    <TextView
        android:id="@+id/textt1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/linktosite1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="151dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:autoLink="all"
        android:clickable="false"
        android:text="@string/link"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/text22"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/linkk"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:autoLink="all"
        android:clickable="false"
        android:text="@string/link1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text33"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/link11"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:visibility="visible"
        tools:visibility="visible" />
    </LinearLayout>
</FrameLayout>